# geodesy-physics

./: CMakeLists.txt  README.md
inc/geodesy/: phys.h
inc/geodesy/phys/: animation.h  collision.h  force.h  mesh.h  node.h
src/: animation.cpp  collision.cpp  force.cpp  mesh.cpp  node.cpp
